--- a/policy.html
+++ b/policy.html
@@ -5,7 +5,7 @@
 
 This Privacy Policy is only applicable if you have downloaded this App from the developer JETTYLAND&#8482; having play store developer id: Jettyland as link mentioned below. This SERVICE is provided by JETTYLAND&#8482; at no cost and is intended for use as is.</br></br>
 
-    ( Play Store Developer ID Link: <font color=green>https://play.google.com/store/apps/developer?id=5125512076836609611</font>)</br></br>
+    ( Play Store Developer ID Link: <font color=green>https://play.google.com/store/apps/developer?id=Jettyland</font>)</br></br>
 
 This page is used to inform visitors regarding my policies with the collection, use, and disclosure of Personal Information if anyone decided to use my Service.</br></br>
 
